--- a/app/src/main/res/layout/activity_doctor_register.xml
+++ b/app/src/main/res/layout/activity_doctor_register.xml
@@ -64,7 +64,7 @@
                 android:background="@drawable/btn"
                 android:elevation="5dp"
                 android:hint="Phone-No"
-                android:inputType="text"
+                android:inputType="number"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
             <EditText
@@ -75,7 +75,7 @@
                 android:background="@drawable/btn"
                 android:elevation="5dp"
                 android:hint="Email-Id"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
             <EditText
