--- a/app/src/main/res/layout/activity_dr_login_cred.xml
+++ b/app/src/main/res/layout/activity_dr_login_cred.xml
@@ -35,7 +35,7 @@
             android:background="@drawable/btn"
             android:elevation="5dp"
             android:hint="Email-id"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             android:paddingLeft="15dp"
             android:textColorHint="#FFFBF8" />
 
@@ -47,7 +47,7 @@
             android:background="@drawable/btn"
             android:elevation="5dp"
             android:hint="New Password"
-            android:inputType="numberPassword"
+            android:inputType="textPassword"
             android:paddingLeft="15dp"
             android:textColorHint="#FFFBF8" />
         <EditText
@@ -58,7 +58,7 @@
             android:background="@drawable/btn"
             android:elevation="5dp"
             android:hint="Confirm Password"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:paddingLeft="15dp"
             android:textColorHint="#FFFBF8" />
         <TextView
