--- a/app/src/main/res/layout/activity_doctor_register.xml
+++ b/app/src/main/res/layout/activity_doctor_register.xml
@@ -64,7 +64,9 @@
                 android:background="@drawable/btn"
                 android:elevation="5dp"
                 android:hint="Phone-No"
-                android:inputType="number"
+                android:inputType="text"
+                android:digits="0123456789"
+                android:maxLength="10"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
             <EditText
@@ -75,7 +77,7 @@
                 android:background="@drawable/btn"
                 android:elevation="5dp"
                 android:hint="Email-Id"
-                android:inputType="textEmailAddress"
+                android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
             <EditText
@@ -122,8 +124,10 @@
                 android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
-            <EditText
+            <TextView
                 android:id="@+id/gender"
+                android:textSize="22dp"
+                android:gravity="center"
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
@@ -133,14 +137,43 @@
                 android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
-            <TextView
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/gender"
+                android:layout_centerHorizontal="true"
+                android:orientation="horizontal"
+                android:showDividers="middle|end"
+                android:layout_marginTop="10dp"
+                android:id="@+id/radioGroup" >
+
+
+                <RadioButton
+                    android:id="@+id/rb1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Male"
+                    android:checked="false" />
+
+                <RadioButton
+                    android:id="@+id/rb2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Female"
+                    android:checked="false" />
+
+            </RadioGroup>
+
+            <EditText
                 android:id="@+id/status"
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn"
                 android:elevation="5dp"
-                android:text="inhold"
+                android:hint="Status"
+                android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
 
