--- a/app/src/main/res/layout/activity_patient_register.xml
+++ b/app/src/main/res/layout/activity_patient_register.xml
@@ -42,7 +42,7 @@
                 android:background="@drawable/btn"
                 android:elevation="5dp"
                 android:hint="Name"
-                android:inputType="textPersonName"
+                android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
 
@@ -67,6 +67,8 @@
                 android:elevation="5dp"
                 android:hint="Phone-No"
                 android:inputType="number"
+                android:digits="0123456789"
+                android:maxLength="10"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
 
@@ -78,12 +80,14 @@
                 android:background="@drawable/btn"
                 android:elevation="5dp"
                 android:hint="Email-Id"
-                android:inputType="textEmailAddress"
+                android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
 
-            <EditText
+            <TextView
                 android:id="@+id/gender"
+                android:textSize="22dp"
+                android:gravity="center"
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
@@ -93,6 +97,33 @@
                 android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/gender"
+                android:layout_centerHorizontal="true"
+                android:orientation="horizontal"
+                android:showDividers="middle|end"
+                android:layout_marginTop="10dp"
+                android:id="@+id/radioGroup" >
+
+
+                <RadioButton
+                    android:id="@+id/rb1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Male"
+                    android:checked="false" />
+
+                <RadioButton
+                    android:id="@+id/rb2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Female"
+                    android:checked="false" />
+
+            </RadioGroup>
 
             <Button
                 android:id="@+id/btn"
