Forgot Password Android Complete

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -39,14 +39,25 @@
             android:textColorHint="#000000" />
 
         <EditText
-            android:id="@+id/code"
+            android:id="@+id/newpassword"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_marginTop="15dp"
             android:background="@drawable/btn"
             android:elevation="5dp"
-            android:hint="Code"
-            android:inputType="numberPassword"
+            android:hint="New Password"
+            android:inputType="textPassword"
+            android:paddingLeft="15dp"
+            android:textColorHint="#000000" />
+        <EditText
+            android:id="@+id/confirmpass"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/btn"
+            android:elevation="5dp"
+            android:hint="Confirm Password"
+            android:inputType="textPassword"
             android:paddingLeft="15dp"
             android:textColorHint="#000000" />
 
