--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/img"
+    android:background="@drawable/login"
     android:gravity="center"
     tools:context=".ForgetPassword">
 
@@ -23,7 +23,7 @@
             android:background="@drawable/circle"
             android:gravity="center"
             android:text="Forget Password"
-            android:textColor="#000000"
+            android:textColor="#FFFBF8"
             android:textSize="17dp" />
 
         <EditText
@@ -36,7 +36,7 @@
             android:hint="Email-id"
             android:inputType="textPersonName"
             android:paddingLeft="15dp"
-            android:textColorHint="#000000" />
+            android:textColorHint="#FFFBF8" />
 
         <EditText
             android:id="@+id/newpassword"
@@ -48,7 +48,7 @@
             android:hint="New Password"
             android:inputType="textPassword"
             android:paddingLeft="15dp"
-            android:textColorHint="#000000" />
+            android:textColorHint="#FFFBF8" />
         <EditText
             android:id="@+id/confirmpass"
             android:layout_width="250dp"
@@ -59,7 +59,7 @@
             android:hint="Confirm Password"
             android:inputType="textPassword"
             android:paddingLeft="15dp"
-            android:textColorHint="#000000" />
+            android:textColorHint="#FFFBF8" />
 
 
         <Button
