--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -57,6 +57,7 @@
                     android:orientation="vertical"
                     android:gravity="center"
                     android:padding="16dp"
+                    android:onClick="sendCall1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
