--- a/app/src/main/res/layout/activity_patient.xml
+++ b/app/src/main/res/layout/activity_patient.xml
@@ -56,8 +56,10 @@
                     android:orientation="vertical"
                     android:gravity="center"
                     android:padding="16dp"
+                    android:onClick="sendCall2"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    tools:ignore="OnClick">
 
                     <ImageView
                         android:src="@drawable/user"
