--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -26,6 +26,13 @@
                 android:text="Doctor Dashboard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/emailIdHide"
+                android:textSize="21dp"
+                android:textColor="#FFFFFF"
+                android:visibility = "gone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
             <ImageView
                 android:id="@+id/logout"
                 android:layout_alignParentRight="true"
