--- a/app/src/main/res/layout/activity_doctor_register.xml
+++ b/app/src/main/res/layout/activity_doctor_register.xml
@@ -165,14 +165,15 @@
 
             </RadioGroup>
 
-            <EditText
+            <TextView
                 android:id="@+id/status"
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn"
                 android:elevation="5dp"
-                android:hint="Status"
+                android:text="Inhold"
+                android:visibility = "gone"
                 android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
