--- a/app/src/main/res/layout/activity_patient.xml
+++ b/app/src/main/res/layout/activity_patient.xml
@@ -20,6 +20,13 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/emailIdHide"
+                android:textSize="21dp"
+                android:textColor="#FFFFFF"
+                android:visibility = "gone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <TextView
                 android:textSize="24dp"
                 android:textColor="#FFFFFF"
                 android:text="Patient Dashboard"
