--- a/app/src/main/res/layout/activity_patient_profile.xml
+++ b/app/src/main/res/layout/activity_patient_profile.xml
@@ -33,7 +33,15 @@
                 android:text="Patient's Profile"
                 android:textColor="#000000"
                 android:textSize="17dp" />
-
+            <TextView
+                android:id="@+id/emailIdHide"
+                android:layout_width="250dp"
+                android:layout_height="44dp"
+                android:layout_marginTop="20dp"
+                android:elevation="5dp"
+                android:visibility = "gone"
+                android:paddingLeft="15dp"
+                android:textColorHint="#000000" />
             <TextView
                 android:id="@+id/namedefault"
                 android:layout_width="250dp"
@@ -51,7 +59,6 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/btn"
                 android:elevation="5dp"
-                android:hint="Name"
                 android:inputType="textPersonName"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -74,7 +81,6 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn"
                 android:elevation="5dp"
-                android:hint="Age"
                 android:inputType="number"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -97,7 +103,6 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn"
                 android:elevation="5dp"
-                android:hint="Phone-No"
                 android:inputType="number"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -120,7 +125,6 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn"
                 android:elevation="5dp"
-                android:hint="Email-Id"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -143,7 +147,6 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn"
                 android:elevation="5dp"
-                android:hint="Gender"
                 android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
