--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,10 +57,10 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/btn"
             android:textSize="24dp"
-            android:paddingLeft="15dp"
-            android:text="User Type"
+            android:paddingLeft="0dp"
+            android:text="Role"
             android:gravity="center"
-            android:textColor="#ffffff"
+            android:textColor="#000"
 
             />
         <RadioGroup
@@ -69,6 +69,7 @@
             android:layout_below="@+id/usertype"
             android:layout_centerHorizontal="true"
             android:orientation="horizontal"
+            android:gravity="center"
             android:showDividers="middle|end"
             android:layout_marginTop="10dp"
             android:id="@+id/radioGroup" >
@@ -79,6 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="patient"
+                android:textSize="21dp"
                 android:textColor="#ffffff"
                 android:checked="false" />
 
@@ -87,6 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="doctor"
+                android:textSize="21dp"
                 android:textColor="#ffffff"
                 android:checked="false" />
 
