--- a/app/src/main/res/layout/activity_patient_profile.xml
+++ b/app/src/main/res/layout/activity_patient_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="@drawable/doc2"
+    android:background="@color/electricblue"
     android:scrollbars="none"
     tools:context=".PatientProfile">
 
@@ -49,6 +49,7 @@
                 android:layout_marginTop="20dp"
                 android:elevation="5dp"
                 android:hint="Name"
+                android:textSize="21dp"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
 
@@ -57,8 +58,9 @@
                 android:layout_width="250dp"
                 android:layout_height="44dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/btn"
+                android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
                 android:inputType="textPersonName"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -70,6 +72,7 @@
                 android:layout_marginTop="15dp"
                 android:elevation="5dp"
                 android:hint="Age"
+                android:textSize="21dp"
                 android:inputType="number"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -79,8 +82,9 @@
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/btn"
+                android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
                 android:inputType="number"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -92,6 +96,7 @@
                 android:layout_marginTop="15dp"
                 android:elevation="5dp"
                 android:hint="Phone-No"
+                android:textSize="21dp"
                 android:inputType="number"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -101,8 +106,9 @@
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/btn"
+                android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
                 android:inputType="number"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -114,6 +120,7 @@
                 android:layout_marginTop="15dp"
                 android:elevation="5dp"
                 android:hint="Email-Id"
+                android:textSize="21dp"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -123,8 +130,9 @@
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/btn"
+                android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -136,6 +144,7 @@
                 android:layout_marginTop="15dp"
                 android:elevation="5dp"
                 android:hint="Gender"
+                android:textSize="21dp"
                 android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
@@ -145,34 +154,42 @@
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/btn"
+                android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
                 android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/gender"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:layout_marginTop="20dp"
+    android:showDividers="middle|end"
+    >
             <Button
                 android:id="@+id/btnedit"
-                android:layout_width="250dp"
+                android:layout_width="120dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/btncolor"
+                android:background="@drawable/btncolor1"
                 android:elevation="5dp"
                 android:text="Edit"
                 android:textAllCaps="false"
-                android:textColor="#FFFBF8" />
+                android:textColor="#000000" />
 
             <Button
                 android:id="@+id/btnback"
-                android:layout_width="250dp"
+                android:layout_width="120dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/btncolor"
+                android:background="@drawable/btncolor1"
                 android:elevation="5dp"
                 android:text="Back"
                 android:textAllCaps="false"
-                android:textColor="#FFFBF8" />
-
+                android:textColor="#000000"
+                android:layout_marginLeft="80dp" />
+</LinearLayout>
 
         </LinearLayout>
 
