--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="midnight">#FF0FBDD3</color>
+    <color name="midnight">#039BE5</color>
+    <color name="electricblue">#00ABFF</color>
+
 </resources>
